minor cleanup, modernizing for J21